# SNES

./: README.md
001 - background-color/: init-hardware.asm
004-moving-bitmap/: main.smc
005-compiling-with-cc65/: cc65.sh  main.s  memmap.cfg
006-sprite-from-bin/: ca65.sh  main.s  main.smc
007-animating-sprite/: Sprite-0001.aseprite  main.s  main.smc  palette.txt  sprite.aseprite  sprite.pal  sprite.pal.txt
008-direct-memory-access/: main.s  main.smc  soldier.pal
009-handling-inputs/: main.s  main.smc
010-cmake/snes_cradle/: CMakeLists.txt
010-cmake/snes_cradle/cmake/: CMakeTestCA65816Compiler.cmake
010-cmake/snes_cradle/src/: CMakeLists.txt
012-snes-cradle/: CMakeLists.txt
012-snes-cradle/assets/: assets.inc
animating-sprite/: Sprite.aseprite  main.s  main.smc  memmap.cfg
background-color/: header.inc  main.asm  main.smc  wla.sh
bitmap/: main.asm  main.smc
documents/: VRAM.md
hello-world/: main.smc
moving-bitmap/: header.inc  wla.sh
multiple-sprites/: sprite.s
sandbox/001-multiple-sprites/: sprite.smc
sandbox/002-animating-sprite-idle/: CMakeLists.txt  MemoryMap.cfg
sandbox/002-animating-sprite-idle/assets/: CMakeLists.txt  sprite.pal
sandbox/002-animating-sprite-idle/cmake/: CMakeDetermineCA65816Compiler.cmake
sandbox/002-animating-sprite-idle/src/: CMakeLists.txt  Main.s
sandbox/002-animating-sprite-idle/src/common/: CMakeLists.txt  GameConstants.inc  InitSNES.inc  InitSNES.s  MemoryMapWRAM.inc
sandbox/002-animating-sprite-idle/src/game/: Input.inc
third-party-tutorials/002-hello-world/: main.asm
(+37 files in other folders)
